--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "heroku": "^7.46.1",
     "http": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5"
   }
