--- a/package.json
+++ b/package.json
@@ -2,26 +2,28 @@
   "name": "APILOGIN",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon node bin/server.js",
+    "start": "node bin/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
-    "heroku": "^7.46.1",
     "http": "0.0.1-security",
+    "jsonschema": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
-    "mysql": "^2.18.1",
+    "moment": "^2.29.1",
     "mysql2": "^2.2.5",
+    "nodemon": "^2.0.6",
     "sequelize": "^6.3.5"
   }
 }
